# drummr

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  docker-compose.yml  kit.toml  mapping.toml  settings.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
distro/: README.md
docs/: ARDOUR_SETUP.md  KITS_CATALOG.md  KIT_DESIGN_GUIDE.md  STEREO_DESIGN.md  backend_leaks.md  bugs.md  code_smells.md  frontend_leaks.md
examples/: list_all_devices.rs  list_alsa_devices.rs  list_hosts.rs  list_midi.rs  midi_gen.rs  monitor_midi.rs
src/: app_utils.rs  audio.rs  comm.rs  commands.rs  kit.rs  lib.rs  main.rs  midi.rs  midi_player.rs  persistence.rs  settings.rs  state.rs  sync.rs
tests/: analysis_tests.rs  architecture_tests.rs  audio_recovery_tests.rs  audio_signal_tests.rs  audio_tests.rs  bpm_audio_integration_tests.rs  bpm_caching_tests.rs  bpm_engine_tests.rs  clock_aware_tests.rs  clock_integration_tests.rs  comm_tests.rs  commands_tests.rs  content_tests.rs  demo_kit_behavior_tests.rs  engine_tests.rs  factory_kit_tests.rs  fm_engine_tests.rs  granular_engine_tests.rs  hybrid_engine_tests.rs  kit_tests.rs  library_tests.rs  midi_player_tests.rs  midi_tests.rs  modal_engine_tests.rs  modulation_tests.rs  no_kit_clipping.rs  noise_voice_tests.rs  pattern_tests.rs  persistence_tests.rs  phys_engine_tests.rs  postfx_tests.rs  probability_tests.rs  realtime_safety_tests.rs  schema_robustness_tests.rs  settings_tests.rs  stability_tests.rs  sub_hits_tests.rs  velocity_contract_tests.rs
ui/: nginx.conf  package-lock.json  (+2 more)
(+157 files in other folders)
