[package]
name = "drummr"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15"
wmidi = "4.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
toml = "0.8"
anyhow = "1.0"
rtrb = "0.3"
midir = "0.9"
url = "2.5"
futures-util = "0.3"

